<resources>
    <string name="app_name">CAMPanion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Enter_Username">Enter Your Username Here</string>
    <string name="Enter_Password">Enter Your Password Here</string>
    <string name="Match_Password">Reenter Your Password Here</string>
    <string name="choice_key">choice key</string>
    <string name="login_key">login key</string>
    <string name="signup_key">signup key</string>
    <string name="Welcome">Welcome</string>
    <string name="Continue_key">continue</string>
    <string name="title_activity_use">CAMPanion</string>
    <string name="button_done">Delete</string>
    <string name="action_add_task">Add Item</string>
    <string name="okay_button">Okay</string>
    <string name="resend_button">resend Email</string>
    <string name="hi">Hi There!</string>

    <string name="notice_of_resend">The resend button will send you a new email should yours not arrive.
    After you receive the email, click the link and try to log in again. Please
    check you spam folder for our email, and enjoy our app ~CAMPanion Team</string>

    <string name="about_us">Hi there! We\'re the developers of the CAMPanion app, Amanda and Mamadou. We
    are lucky enough to be living and going to school in the Pacific Northwest with some of the greatest
    outdoor spaces ever. That\'s why we wanted to create an app that helped others get out in the great
    outdoors, like we can. We decided the best way to do that was to create the app we wish we had, with a
    way to see campsites and a packing list, and we just kept adding things as we went. We hope you love
    the app as much as we do, and maybe we\'ll see you out on the trails.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>

    <string name="stateEx">Pick a state or province</string>
    <string name="semiHook">Partial Hookups</string>
    <string name="fullHook">Full Hookups</string>
    <string name="pet">Pets</string>
    <string name="equine">Equine</string>

    <string name="dictionary">Full Hookups: Access to Water, Electricity, and Sewer \nPartial Hookups: Access to Water and Electricity \nElectricity: For our app, currently we check for 30 amps or more \nPets: Campsite is conducive to furry friends
    </string>

    <string name="USForest">US Forestry Line: 800-832-1355</string>
    <string name="CANForest">Canadian Natural Resources Line: 1-855-862-1809</string>

    <string-array name="state_codes">
        <item>AB</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>BC</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MB</item>
        <item>ME</item>
        <item>MD</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NB</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NL</item>
        <item>NM</item>
        <item>NS</item>
        <item>NT</item>
        <item>NV</item>
        <item>NU</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>ON</item>
        <item>OR</item>
        <item>PA</item>
        <item>PE</item>
        <item>QC</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>SK</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
        <item>YT</item>
    </string-array>


</resources>
