<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group4.tcss450.uw.edu.campanion.DictionaryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/dictionaryText"
        android:layout_width="242dp"
        android:layout_height="178dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/dictionary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ForestryService"
        android:layout_width="230dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/USForest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionaryText" />

    <TextView
        android:id="@+id/naturalResourceService"
        android:layout_width="233dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/CANForest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForestryService" />

</android.support.constraint.ConstraintLayout>
