<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group4.tcss450.uw.edu.campanion.PlaceHolderFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="123dp"
        android:layout_marginLeft="132dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textForNotice"
        android:layout_width="317dp"
        android:layout_height="176dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="34dp"
        android:fontFamily="serif-monospace"
        android:text="@string/notice_of_resend"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

</android.support.constraint.ConstraintLayout>
